test-macros/tests/test_macro/03-missing-config-attribute.rs
#[helper::test(servers = 1)]
fn single_server(ctx: helper::Context) {}

fn main() {}
